# yandex_passport_tests

./: .gitignore  README.md  config.ini  conftest.py  definitions.py  pyproject.toml  pytest.ini
lib/: model.py  utils.py
lib/config/: config_parser.py  example.py
lib/jsonplaceholder/: __init__.py  client.py  constants.py
src/: http_client.py  runner.py  scrapping_client.py
src/models/: user.py
tests/authentification/: conftest.py  constants.py  test_login.py
tests/authentification/models/: auth_page.py
tests/models/: page.py
