[tool.poetry]
name = "yandex-pasport-tests"
version = "0.1.0"
description = ""
authors = ["Dmitriy Klepikov <klepikovdima@gmail.com>"]
readme = "README.md"
packages = [{include = "yandex_pasport_tests"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
selenium = "^4.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
